2006-09-17  Brian Warner  <warner@lothar.com>

	* buildbot/process/step.py: oops, added extra imports by mistake

	* buildbot/changes/p4poller.py (P4Source._process_describe): do an
	rstrip() on the first line coming out of the 'p4 describe'
	process, to remove the stray ^M that Wade Brainerd reports seeing
	in the 'when' field. Fixes SF#1555985.

	* buildbot/master.py (BuildMaster.loadConfig): improve the error
	message logged when c['schedulers'] is not right
	* buildbot/scheduler.py (Scheduler.__init__): improve error
	message when a Scheduler() is created with the wrong arguments
	* buildbot/test/test_config.py (ConfigTest.testSchedulerErrors):
	verify that these error messages are emitted

	* buildbot/process/buildstep.py: rename step.py to buildstep.py .
	The idea is that all the base classes (like BuildStep and
	RemoteCommand and LogObserver) live in b.p.buildstep, and b.p.step
	will be a leftover backwards-compatibility file that only contains
	aliases for the steps that were moved out to buildbot.steps.*
	* lots: change imports to match
	* buildbot/process/step.py: add a DeprecationWarning if it ever
	gets imported

2006-09-12  Brian Warner  <warner@lothar.com>

	* buildbot/scheduler.py (Scheduler.__init__): make sure that
	builderNames= is actually a sequence, since if you happen to give
	it a single builder-specification dictionary instead, it won't get
	caught by the existing assert. Thanks to Brett Neely for the
	catch.

	* buildbot/steps/python.py (BuildEPYDoc, PyFlakes): add new steps. No
	tests yet, alas.
	* docs/buildbot.texinfo (Python BuildSteps): document them
	(sendchange): include a link to PBChangeSource, since you need one

	* buildbot/steps/shell.py: clean up test-case-name line, remove some
	unnecessary imports
	* buildbot/steps/dummy.py: same

2006-09-08  Brian Warner  <warner@lothar.com>

	* buildbot/steps/transfer.py (FileUpload,FileDownload): new
	BuildStep which lets you transfer files from the master to the